--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -132,6 +132,8 @@
 					Be a community partner with our local business and leaders.
 					</p>
 				</article>
+
+			<img src="pics/welcome.jpg" class="pic-border" style="width:100%; height:100%;">
 		</div>
 	</section>
 </div>
