--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -161,6 +161,10 @@
 			<div id="container">
 			<img src="./pics/sundayschool.jpg" width="300" height="400" class="min-pic-sun pic-border">
 			</div>
+
+			<div id="container">
+			<img src="./pics/sundayschool2.jpg" width="300" height="400" class="min-pic-sun pic-border">
+			</div>
 		</aside>
     </div>
   </div>
@@ -193,6 +197,75 @@
 
 <header style="margin-bottom: 8px;"></header>
 
+<div class="container">
+  <div class="row">
+    <div class="col">
+     <h2 class="ministries-header">Altar Guild</h2>
+			<article class="ministries-content">
+				<p>The Altar Guild are  lay persons entrusted with the responsibility of preparing the altar for all services and of caring for the communion vessels and elements for Holy Communion.</p>
+				<div style="clear: both;"></div>
+			</article>
+    </div>
+    <div class="col" style="margin: auto; text-align: center;">
+      <aside id="ministries-img-sec">
+			<div id="container">
+			<img src="./pics/altar guild.jpg" width="400" height="300" class="min-pic-wom pic-border">
+			</div>
+		</aside>
+    </div>
+  </div>
+</div>
+
+<!--  -->
+
+<header style="margin-bottom: 8px;"></header>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+     <h2 class="ministries-header">Daughters of the King</h2>
+			<article class="ministries-content">
+				<p>An Episcopalian ministry that promotes faith in Christ’s kingdom through service, prayer, and evangelism.</p>
+				<div style="clear: both;"></div>
+			</article>
+    </div>
+    <div class="col" style="margin: auto; text-align: center;">
+      <aside id="ministries-img-sec">
+			<div id="container">
+			<img src="./pics/daughters of the king.jpg" width="400" height="300" class="min-pic-wom pic-border">
+			</div>
+		</aside>
+    </div>
+  </div>
+</div>
+
+<!--  -->
+
+<header style="margin-bottom: 8px;"></header>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+     <h2 class="ministries-header">Cultural Committee</h2>
+			<article class="ministries-content">
+				<p>Offers and supports activities that foster, communication, education, and cultural exchange and provides enrichment and involvement for St. Philip’s congregation and our Harlem community.</p>
+				<div style="clear: both;"></div>
+			</article>
+    </div>
+    <div class="col" style="margin: auto; text-align: center;">
+      <aside id="ministries-img-sec">
+			<div id="container">
+			<img src="./pics/cultural committee.jpg" width="400" height="300" class="min-pic-wom pic-border">
+			</div>
+		</aside>
+    </div>
+  </div>
+</div>
+
+<!--  -->
+
+<header style="margin-bottom: 8px;"></header>
+
 <section id="volunteerism">
 	<div class="container">
 		<h2 class="ministries-header">Candace Organization</h2>
@@ -208,62 +281,7 @@
 			<img src="placeholder" class="">
 			</div>
 		</aside>
-<header style="margin-bottom: 8px;"></header>
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="ministries-header">Altar Guild</h2>
-			<article class="ministries-content">
-				<p>The Altar Guild are  lay persons entrusted with the responsibility of preparing the altar for all services and of caring for the communion vessels and elements for Holy Communion.<br>
-			</article>
-	</div>
-</section>
 
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
-
-<!--  -->
-
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="ministries-header">Cutural Committee</h2>
-			<article class="ministries-content">
-				<p>Offers and supports activities that foster, communication, education, and cultural exchange and provides enrichment and involvement for St. Philip’s congregation and our Harlem community.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
-
-<!--  -->
-
-<section id="volunteerism">
-	<div class="container">
-		<h2 class="ministries-header">Daughters of the King</h2>
-			<article class="ministries-content">
-				<p>An Episcopalian ministry that promotes faith in Christ’s kingdom through service, prayer, and evangelism.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
 
 <header></header>
 
