--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -156,14 +156,11 @@
 					<div style="clear: both;"></div>
 			</article>
     </div>
-    <div class="col" style="margin: auto; text-align: center;">
+    <div class="col" style="margin: auto; float: left;">
       <aside id="ministries-img-sec">
 			<div id="container">
-			<img src="./pics/sundayschool.jpg" width="300" height="400" class="min-pic-sun pic-border">
-			</div>
-
-			<div id="container">
-			<img src="./pics/sundayschool2.jpg" width="300" height="400" class="min-pic-sun pic-border">
+			<img src="./pics/sundayschool.jpg" width="200" height="300" class="min-pic-sun pic-border">
+			<img src="./pics/sundayschool2.jpg" width="200" height="300" class="min-pic-sun pic-border">
 			</div>
 		</aside>
     </div>
