margin change before meeting 7/5/18

--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -156,7 +156,7 @@
 					<div style="clear: both;"></div>
 			</article>
     </div>
-    <div class="col" style="margin: auto; float: left;">
+    <div class="col" style="margin: auto; margin-left: 12%;">
       <aside id="ministries-img-sec">
 			<div id="container">
 			<img src="./pics/sundayschool.jpg" width="200" height="300" class="min-pic-sun pic-border">
