celebration contact mail 7/5/18

--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -76,7 +76,7 @@
 			</article>
 
 			<div id="actual-b-button">
-				<button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">CONTACT</button>
+				<a class="btn btn-primary btn-lg volunteerism-button" id="volunteerism-button" href="mailto:st_philips_church@yahoo.com">CONTACT</a>
 			</div>
 	</div>
 </section>
@@ -106,7 +106,7 @@
 				</article>
 
 				<div id="actual-c-button">
-					<button id="confirmation-button" type="button" class="btn btn-primary btn-lg confirmation-button">CONTACT</button>
+					<a class="btn btn-primary btn-lg volunteerism-button" id="volunteerism-button" href="mailto:st_philips_church@yahoo.com">CONTACT</a>
 				</div>
 		</div>
 	  </section>
@@ -144,7 +144,7 @@
 			</article>
 
 			<div id="actual-b-button">
-				<button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">CONTACT</button>
+				<a class="btn btn-primary btn-lg volunteerism-button" id="volunteerism-button" href="mailto:st_philips_church@yahoo.com">CONTACT</a>
 			</div>
 	</div>
 </section>
@@ -174,7 +174,7 @@
 			</article>
 
 			<div id="actual-b-button">
-				<button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">CONTACT</button>
+				<a class="btn btn-primary btn-lg volunteerism-button" id="volunteerism-button" href="mailto:st_philips_church@yahoo.com">CONTACT</a>
 			</div>
 
 	</div>
@@ -211,7 +211,7 @@
 			<div class="container">
 				<ul id="social">
 					<li><a href="#"><img src="insta.svg"></a></li>
-					<li><a href="#"><img src="facebook.svg"></a></li>
+					<li><a href="https://www.facebook.com/StPhilipsHarlem/"><img src="facebook.svg"></a></li>
 				</ul>
 				<h1 id="footer-head"><i>JOIN US THIS LITURGICAL YEAR</i><br> 
 					<span id="footer-sub">KEEP IN TOUCH WITH ST. PHILIP'S</span>
