--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -75,8 +75,16 @@
 		<div id="mission-start" class="container">
 			<h2 class="mission-header mission-header-green">Worship
 			</h2>
+
 				<article class="mission-top-sub">
-					<p>9:00 a.m. Morning Prayer
+					<h3 class="mission-sub-border">Please note summer service: Summer 10am service only</h3>
+				</article>
+
+				<article class="mission-top-sub">
+					<p>Services below will resume in the fall:
+					<br>
+					<br>
+						9:00 a.m. Morning Prayer
 					<br>
 					<br>
 					 11:00 a.m.  first, second and fourth Sundays - Solemn High Mass.  
@@ -87,7 +95,7 @@
 				</article>
 
 				<article class="mission-top-sub">
-					<p>Sunday School - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018.
+					<p>Sunday School will resume in the fall.<!-- - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018. -->
 					<br>
 					<br>
 					</p>
@@ -477,9 +485,9 @@
 		<div>
 			<h2 class="vestry-name fit">VESTRY OF ST. PHILIP'S</h2>
 			<p >
-			Vestry Members: Class of 2018: Felix Okolo, Renee Parris-Scott and Ted Roulette <br>
-			Class of 2019: Neal Baker, Geneva Chase and Eric Hall <br>
-			Class of 2020: Erdene Kims, Rita Livingston and Jasmine Vaughan-Atkinson <br></p>
+			Vestry Members: Felix Okolo, Renee Parris-Scott and Ted Roulette <br>
+			Neal Baker, Geneva Chase and Eric Hall <br>
+			Erdene Kims, Rita Livingston and Jasmine Vaughan-Atkinson <br></p>
 
 <span class="space"></span>
 
