--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -60,8 +60,8 @@
 		<div class="container">
 			<section id="services">
 				<ul>
-					<li><a style="cursor: pointer;" onclick="services()"><span class="active-service">SERVICES</a></li>
-					<li><a style="cursor: pointer;" onclick="music()">MUSIC</span></a></li>
+					<li><a style="cursor: pointer;" onclick="services()"><span class="active-service">SERVICES</span></a></li>
+					<li><a style="cursor: pointer;" onclick="music()">MUSIC</a></li>
 					<li><a style="cursor: pointer;" onclick="staff()">CLERGY AND STAFF</a></li>
 					<!-- <li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
 					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li> -->
@@ -77,7 +77,7 @@
 			</h2>
 
 				<article class="mission-top-sub">
-					<h3 class="mission-sub-border">Please note summer service: Summer 10am service only</h3>
+					<h3 class="mission-sub-border">SUMMER SCHEDULE:  10:00 A.M. ONE service only beginning July 1, 2018.</h3>
 				</article>
 
 				<article class="mission-top-sub">
@@ -95,7 +95,7 @@
 				</article>
 
 				<article class="mission-top-sub">
-					<p>Sunday School will resume in the fall.<!-- - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018. -->
+					<p>SUNDAY SCHOOL will resume in September 2018.<!-- - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018. -->
 					<br>
 					<br>
 					</p>
@@ -185,8 +185,8 @@
 		<div class="container">
 			<section id="services">
 				<ul>
-					<li><a style="cursor: pointer;" onclick="services()"><span>SERVICES</a></li>
-					<li><a style="cursor: pointer;" onclick="music()" class="active-service">MUSIC</span></a></li>
+					<li><a style="cursor: pointer;" onclick="services()">SERVICES</a></li>
+					<li><a style="cursor: pointer;" onclick="music()"><span class="active-service">MUSIC</span></a></li>
 					<li><a style="cursor: pointer;" onclick="staff()">CLERGY AND STAFF</a></li>
 					<!-- <li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
 					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li> -->
@@ -355,7 +355,7 @@
 				<ul>
 					<li><a style="cursor: pointer;" onclick="services()"><span>SERVICES</a></li>
 					<li><a style="cursor: pointer;" onclick="music()">MUSIC</span></a></li>
-					<li><a style="cursor: pointer;" onclick="staff()" class="active-service">CLERGY AND STAFF</a></li>
+                    <li><a style="cursor: pointer;" onclick="staff()"> <span class="active-service">CLERGY AND STAFF</span></a></li>
 					<!-- <li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
 					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li> -->
 				</ul>
@@ -469,6 +469,17 @@
 	</div>
 </div>
 <!-- Row End -->
+    
+<div class="container" id="staff-overall-container">
+    <h2 class="mission-header mission-header-green">St. Philip’s Credit Union</h2>
+    <p class="mission-top-sub">The St. Philip’s Credit Union was organized in 1951 to enable parishioners of  St. Philip’s Church to invest their savings and obtain credit on affordable terms. Responding to the difficulty faced by many African-Americans in saving or borrowing money at commercial banks, the founders of the Credit Union started the organization with only $100.
+    <br>
+    <br>
+    The Credit Union is a federally-chartered financial institution. All deposits are insured by the Federal Deposit Insurance Corporation. Over the years, the Credit Union has grown to over $1.5 million in assets. Its mission is to encourage thrift among its members, and to assist them in developing a sound financial understanding. Membership in the Credit Union is open to all members of St. Philip’s Church. Parishioners can earn competitive rates on their savings, and borrow at reasonable interest rates for a variety of purposes.
+    <br>
+    <br>
+    The Credit Union is affiliated with St. Philip’s Church, but is independently managed by a Board of Directors composed of eight members of the church. The Credit Union is open on Wednesdays from 5:30-7:30 p.m. and on Sundays from 12:00-2:00 p.m.</p>
+</div>
 
 <div class="container" id="staff-overall-container">
 <h2 class="mission-header mission-header-green">Vestry</h2>
