--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -78,7 +78,7 @@
 	
 				<div class="box">
 					<h2>Dance of the Village Elders</h2>
-					<a href="events-list-garvey.html"><img "></a>
+					<a href="events-list-garvey.html"></a>
 					<p><i><span>N</span>inety minute free fitness classes for seniors on Thursdays @2 p.m.</i> 
 					<br>
 					<br>
