--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -148,7 +148,7 @@
   <div class="row">
     <div class="col">
      	<h2 class="volunteer-header">VOLUNTEERISM</h2>
-			<article class="volunteer-content" style="width: 50%;">
+			<article class="volunteer-content">
 				<p>Indeed, the giving of time is also an important aspect of stewardship that should not be overlooked. If
 				you are interested in exploring ways to give of your time at St. Philip’s, please look at ourestablished
 				ministries to find one that may be right for you. Additionally, announcements for service opportunities
