--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -272,14 +272,6 @@
 	</div>
 </section>
 
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder" class="">
-			</div>
-		</aside>
-
-
 <header></header>
 
 <!--  -->
@@ -292,13 +284,6 @@
 			</article>
 	</div>
 </section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
 
 <header></header>
 
@@ -313,13 +298,6 @@
 	</div>
 </section>
 
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
 <header></header>
 
 <!--  -->
@@ -332,13 +310,6 @@
 			</article>
 	</div>
 </section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
 
 <header></header>
 
@@ -353,13 +324,6 @@
 	</div>
 </section>
 
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
 <header></header>
 
 <!--  -->
@@ -372,13 +336,6 @@
 			</article>
 	</div>
 </section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
 
 <header></header>
 
@@ -393,13 +350,6 @@
 	</div>
 </section>
 
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
 <header></header>
 
 <!--  -->
@@ -412,13 +362,6 @@
 			</article>
 	</div>
 </section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
 
 <header></header>
 
@@ -434,11 +377,27 @@
 </section>
 
 
+<!--  -->
+<header></header>
+
+<section id="volunteerism">
+	<div class="container">
+		<h2 class="ministries-header">Senator Chuck Allen III Scholarship Fund</h2>
+			<article class="ministries-content">
+				<p>Established in 2008 in memory of the public service and parish activism of Chuck Allen, the Senator Chuck Allen III Scholarship annually distributes monies to high school seniors of color who desire to study accounting, law, political or urban studies or work in public management. Students must have a proven record of leadership and community activism as well as financial need. Students will be required to write a 1,000 word topic essay chosen by the selection committee. For more information on the scholarship and application, please visit <span><a href="http://scaiiischolar.org.">http://scaiiischolar.org.</a></span><br>
+			</article>
+	</div>
+</section>
+
+<!--
+
+
 		<aside id="ministries-img-sec">
 			<div id="container">
 			<img src="placeholder">
 			</div>
 		</aside>
+-->
 <!-- Time End -->
 
 
