--- a/pt St. Philips/rentals.html
+++ b/pt St. Philips/rentals.html
@@ -67,7 +67,7 @@
 <!-- Services -->
 <section>
 	<div class="container">
-		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Courtyard Garden</h2>
+		<h2 class="mission-header mission-header-green garden-head rental-place">St. Philip’s Courtyard Garden</h2>
 		<p class="mission-top-sub about-sub">			
 		The St. Philip’s courtyard garden is a peaceful oasis from the bustling sights and
 		sounds of the city. Amidst trees and flowers, birds and squirrels the garden
@@ -147,7 +147,7 @@
 <!-- Services -->
 <section>
 	<div class="container">
-		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Undercroft
+		<h2 class="mission-header mission-header-green garden-head rental-place">St. Philip’s Undercroft
 			</h2>
 		<p class="mission-top-sub about-sub">			
 		Offers a full kitchen for keeping food warm as well as male and female restrooms.
@@ -218,7 +218,7 @@
 <!-- Services -->
 <section>
 	<div class="container">
-		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Nave
+		<h2 class="mission-header mission-header-green garden-head rental-place">St. Philip’s Nave
 			</h2>
 		<p class="mission-top-sub about-sub">			
 		Is represented by the pews in which our parishioners sit. The splendor of our main
@@ -300,7 +300,7 @@
 <!-- Services -->
 <section>
 	<div class="container">
-		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Sanctuary
+		<h2 class="mission-header mission-header-green garden-head rental-place">St. Philip’s Sanctuary
 			</h2>
 		<p class="mission-top-sub about-sub">			
 		The raised portion for the front part of the church houses our altar, organ, and
@@ -349,7 +349,7 @@
 <!-- What to Expect -->
 <section>
 	<div class="container">
-		<h2 class="mission-header mission-header-green garden-head" style="width: 60%;">St. Philip’s Courtyard Garden
+		<h2 class="mission-header mission-header-green garden-head rental-place">St. Philip’s Courtyard Garden
 			</h2>
 		<p class="mission-top-sub about-sub">			
 		The St. Philip’s courtyard garden is a peaceful oasis from the bustling sights and
