--- a/pt St. Philips/history.html
+++ b/pt St. Philips/history.html
@@ -342,7 +342,7 @@
 
 		<aside>
 			<div id="container">
-			<img class="history-img-8" src="./pics/history-portrait-5.jpg">
+			<img class="history-img-12" src="./pics/new.png">
 						<section class="history-img-8-sub">
 				<p>Dr. M. Moran Weston Sixth Rector
 				<br>
