--- a/pt St. Philips/history.html
+++ b/pt St. Philips/history.html
@@ -342,11 +342,11 @@
 
 		<aside>
 			<div id="container">
-			<img class="history-img-12" src="./pics/new.png">
+			<img class="history-img-12" src="./pics/new1.jpg">
 						<section class="history-img-8-sub">
-				<p>Dr. M. Moran Weston Sixth Rector
+				<p>
 				<br>
-				1957-1982</p>
+				</p>
 			</section>
 			</div>
 		</aside>
