--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -118,7 +118,10 @@
 					<br>
 					We know it can seem daunting to visit a church for the first time, not unlike visiting a foreign country where you are uncertain about the customs and traditions. We hope this brief introduction will make your first visit at St. Philip’s more comfortable.
 					</p>
+                    <br>
+                    
 					<p>At 9am, We offer a said service of Holy Eucharist; that is, a spoken worship service of Holy Eucharist (Communion) with prayers and a sermon but without hymns or music. This service is often attractive to those who prefer and/or who wish, from time to time, to experience a more contemplative service of prayer and reflection.</p>
+                    <br>
 
 					<p>At 11:00am, We offer a choral Holy Eucharist, which features hymns led by one of our choirs, and which periodically includes the use of incense and communal chanting of certain sections of the worship service. Specifically, worship is led by the Chancel Choir on the first, second and fourth Sundays and by the Voices of Praise contemporary choir on the third and fifth Sundays.</p>
 					<br>
@@ -373,7 +376,7 @@
 			<h2 class="staff-name">Rev. Canon Terence Alexander Lee</h2>
 			<img class="staff-img-pg" src="./staff/new1.png" 
 			onclick="desc0()" style="cursor: pointer;">
-			<h2 class="staff-sub">Associate Priest</h2>
+			<h2 class="staff-sub">Rector</h2>
 		</div>
     </div>
     
