--- a/pt St. Philips/rentals.html
+++ b/pt St. Philips/rentals.html
@@ -229,8 +229,8 @@
 		Fees vary according to use. Please contact our Parish Administrator, 212-862-4940.
 		</p>
 
-		<img src="./pics/nave side.jpg" class="pic-border" style="width:50%; height: 50%; margin: auto; float: left; image-orientation: 0deg; display: block; transform: rotate(90deg); margin-top: 10%; position: relative;">
-		<img src="./pics/nave.jpg" class="pic-border" style="width:50%; height: 50%; margin: auto; float: right; text-align: center; display: block; margin-top: 10%; position: relative;">
+		<img src="./pics/nave side.JPG" class="pic-border" style="width:50%; height: 50%; margin: auto; float: left; image-orientation: 0deg; display: block; transform: rotate(90deg); margin-top: 10%; position: relative;">
+		<img src="./pics/nave.JPG" class="pic-border" style="width:50%; height: 50%; margin: auto; float: right; text-align: center; display: block; margin-top: 10%; position: relative;">
 
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
