--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -90,7 +90,7 @@
 					    <p>We baptize both adults who have come to have faith in Christ and children whose guardians present them for the sacrament. We believe, that Baptism creates an eternal bond between the person and God. We do not, therefore, re-baptize those who were previously baptized, whether in the Episcopal Church or in another context. We would be delighted to explore with any baptized persons membership in the Episcopal Church.
 					    <br>
 					    <br>
-						If you are interested in this sacrament, please e-mail us at stphilipschurch.org or 212-862-4940.</p>
+						If you are interested in this sacrament, please e-mail us at stphilipschurch.org or call our Parish Administrator at 212-862-4940.</p>
 					  </div>
 					</div>
     </div>
@@ -100,7 +100,7 @@
 				<h2 class="confirmation-header">CONFIRMATION</h2>
 				<article class="confirmation-content">
 					<p>Have a confirmation coming up? <br> <br>
-						Confirmation and reaffirmation are rites that area meant to help one renew commitments made during baptisms or made on their behalf by parents or others at baptism in the Baptismal Covenant.
+						Confirmation and reaffirmation are rites that are meant to help one renew commitments made during baptisms or made on their behalf by parents or others at baptism in the Baptismal Covenant.
 					</p>
 						<button id="myBtn-2" onclick="seemore2()">see more</button>
 				</article>
@@ -190,7 +190,7 @@
 					    Couples who have a relationship with St. Philip's Church are encouraged to celebrate their marriage here. We welcome others to meet with the Rector to explore whether Saint John the Divine is the right place for your wedding.
 					    <br>
 					    <br>
-						For the details on having a wedding at St. Philip's please contact our Church Administrator...</p>
+						For the details on having a wedding at St. Philip's please contact our Parish Administrator at 212-862-4940...</p>
 					  </div>
 					</div>
     </div>
