--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -1,239 +1,273 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>St. Philips</title>
-<!-- Meta Tags -->
+	<!-- Meta Tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+	 crossorigin="anonymous">
 
-<!-- CSS from scratch -->
+	<!-- CSS from scratch -->
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
-<!-- Google Fonts -->
+	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Merriweather" rel="stylesheet">
 
-<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	 crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	 crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+	 crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="main.js">
+	<link rel="stylesheet" type="text/css" href="main.js">
 
 </head>
+
 <body>
-<!-- Navigation Start -->
-<body>
-	<header id="top-bot-border">
-		<div class="container" >
-			<div id="branding">
-				<img src="./logo/logorere-01.png" width="320" height="40" id="logo-main">
-			</div>
-			<nav>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><a href="#">About</a></li>
+	<!-- Navigation Start -->
+
+	<body>
+		<header id="top-bot-border">
+			<div class="container">
+				<div id="branding">
+					<img src="./logo/logorere-01.png" width="320" height="40" id="logo-main">
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<a href="index.html">Home</a>
+						</li>
+						<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle">
+							<a href="#">About</a>
+						</li>
 						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 							<a class="dropdown-item" href="about.html">INFO</a>
 							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
-    						<a class="dropdown-item" href="events.html">EVENTS</a>
-    						<a class="dropdown-item" href="rentals.html">RENTALS</a>
-    						<a class="dropdown-item" href="pastoralcare.html">PASTORAL CARE</a>
-  						</li>
-					<li><a href="history.html">History</a></li>
-					<li class="current"><a href="giving.html">Giving</a></li>
-					<li><a href="ministries.html">Ministries</a></li>
-					<li><a href="celebration.html">Celebration</a></li>
-				</ul>
-			</nav>
+							<a class="dropdown-item" href="events.html">EVENTS</a>
+							<a class="dropdown-item" href="rentals.html">RENTALS</a>
+							<a class="dropdown-item" href="pastoralcare.html">PASTORAL CARE</a>
+						</li>
+						<li>
+							<a href="history.html">History</a>
+						</li>
+						<li class="current">
+							<a href="giving.html">Giving</a>
+						</li>
+						<li>
+							<a href="ministries.html">Ministries</a>
+						</li>
+						<li>
+							<a href="celebration.html">Celebration</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<!-- Navigation End -->
+
+		<!-- Giving Header -->
+		<div id="giving-background">
+			<div class="jumbotron-fluid giving">
+				<div class="container">
+					<h1 id="giving-header" class="display-4">GIVING</h1>
+					<p id="giving-sub" class="lead"></p>
+
+				</div>
+
+				<div>
+					<a href="#treasure-header">
+						<button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button" style="margin-right: 2%;">Treasure</button>
+					</a>
+
+					<a href="#time-header">
+						<button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button">Time</button>
+					</a>
+
+					<a href="#talent-header">
+						<button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button" style="margin-left: 2%;">Talent</button>
+					</a>
+
+					<a href="#steward-header">
+						<button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button" style="margin-left: 2%;">Stewardship</button>
+					</a>
+				</div>
+
+			</div>
 		</div>
-	</header>
-<!-- Navigation End -->
 
-<!-- Giving Header -->
-<div id="giving-background">
-<div class="jumbotron-fluid giving">
-  <div class="container">
-    <h1 id="giving-header" class="display-4">GIVING</h1>
-    <p id="giving-sub" class="lead"></p>
+		<header></header>
+		<!-- Giving Header End -->
 
-  </div>
-  
-  <div>
-    <a href="#treasure-header"><button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button" style="margin-right: 2%;">Treasure</button></a>
+		<!-- Treasure -->
+		<div id="treasure-background">
+			<div class="jumbotron-fluid giving">
+				<div class="container">
+					<h1 id="treasure-header" class="display-4">TREASURE</h1>
+				</div>
+			</div>
+		</div>
 
-    <a href="#time-header"><button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button">Time</button></a>
-
-    <a href="#talent-header"><button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button" style="margin-left: 2%;">Talent</button></a>
-
-    <a href="#steward-header"><button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button" style="margin-left: 2%;">Stewardship</button></a>
-  </div>
-
-</div>
-</div>
-
-<header></header>
-<!-- Giving Header End -->
-
-<!-- Treasure -->
-<div id="treasure-background">
-<div class="jumbotron-fluid giving">
-  <div class="container">
-    <h1 id="treasure-header" class="display-4">TREASURE</h1>
-  </div>
-</div>
-</div>
-
-<section id="treasure-boxes">
+		<section id="treasure-boxes">
 			<div class="container">
 
 				<div class="treasure-boxes">
 					<div id="circle-1"></div>
 					<h3 class="treasure-names">MONETARY</h3>
-					<p>Miscellaneous monetary 
-					<br>
-					donations for, e.g. prayer 
-					<br>
-					books, hymnals, organ repair.</p>
+					<p>Miscellaneous monetary
+						<br> donations for, e.g. prayer
+						<br> books, hymnals, organ repair.</p>
 					<div id="treasure-button-margin">
-					<button id="treasure-button" type="button" class="btn btn-primary btn-lg treasure-button">DONATE</button>
+						<!-- <button id="treasure-button" type="button" class="btn btn-primary btn-lg treasure-button">DONATE</button> -->
 					</div>
 				</div>
-	
+
 				<div class="treasure-boxes">
 					<div id="circle-2"></div>
 					<h3 class="treasure-names">IN-KIND</h3>
 					<p>In-Kind donations
-					<br>
-					- paper goods,
-					<br> 
-					coffee, flowers</p>
+						<br> - paper goods,
+						<br> coffee, flowers</p>
 					<div id="treasure-button-margin">
-					<button id="treasure-button" type="button" class="btn btn-primary btn-lg treasure-button">INQUIRE</button>
+						<!-- <button id="treasure-button" type="button" class="btn btn-primary btn-lg treasure-button">INQUIRE</button> -->
 					</div>
 				</div>
-		
+
 				<div class="treasure-boxes">
 					<div id="circle-3"></div>
 					<h3 class="treasure-names">TREE OF LIFE</h3>
-					<p>Tree of Life - 
-					<br>purchase leaves 
-					<br>for rememberance</p>
+					<p>Tree of Life -
+						<br>purchase leaves
+						<br>for rememberance</p>
 					<div id="treasure-button-margin">
-					<button id="treasure-button" type="button" class="btn btn-primary btn-lg treasure-button">BUY</button>
+						<!-- <button id="treasure-button" type="button" class="btn btn-primary btn-lg treasure-button">BUY</button> -->
 					</div>
 				</div>
 			</div>
-		
+
 		</section>
-<!-- Treasure End -->
+		<!-- Treasure End -->
 
-<header></header>
+		<header></header>
 
-<!-- Time -->
-<div id="time-background">
-<div class="jumbotron-fluid giving">
-  <div class="container">
-    <h1 id="time-header" class="display-4">TIME</h1>
-  </div>
-</div>
-</div>
+		<!-- Time -->
+		<div id="time-background">
+			<div class="jumbotron-fluid giving">
+				<div class="container">
+					<h1 id="time-header" class="display-4">TIME</h1>
+				</div>
+			</div>
+		</div>
 
 
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-     	<h2 class="volunteer-header">VOLUNTEERISM</h2>
-			<article class="volunteer-content">
-				<p>Indeed, the giving of time is also an important aspect of stewardship that should not be overlooked. If
-				you are interested in exploring ways to give of your time at St. Philip’s, please look at ourestablished
-				ministries to find one that may be right for you. Additionally, announcements for service opportunities
-				are listed in the ‘Sunday News’ insert found in the service bulletin.
-				If you are interested in starting a new ministry, please speak with one of our clergy as the starting point.
-				</p>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h2 class="volunteer-header">VOLUNTEERISM</h2>
+					<article class="volunteer-content">
+						<p>Indeed, the giving of time is also an important aspect of stewardship that should not be overlooked. If you are interested
+							in exploring ways to give of your time at St. Philip’s, please look at ourestablished ministries to find one that
+							may be right for you. Additionally, announcements for service opportunities are listed in the ‘Sunday News’ insert
+							found in the service bulletin. If you are interested in starting a new ministry, please speak with one of our clergy
+							as the starting point.
+						</p>
 
-			</article>
-				<div id="actual-v-button">
-					<button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">JOIN</button>
+					</article>
+					<div id="actual-v-button">
+						<!-- <button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">JOIN</button> -->
+					</div>
+
+					<div class="col" style="margin: auto; text-align: center;">
+						<aside id="ministries-img-sec">
+							<div id="container">
+								<img src="./pics/volun.jpg" width="500" height="300" class="min-pic-warr pic-border">
+							</div>
+							<div style="clear: both;"></div>
+						</aside>
+					</div>
+
 				</div>
 
-		<div class="col" style="margin: auto; text-align: center;">
-      <aside id="ministries-img-sec">
-			<div id="container">
-			<img src="./pics/volun.jpg" width="500" height="300" class="min-pic-warr pic-border">
 			</div>
-			<div style="clear: both;"></div>
-		</aside>
-    </div>
+		</div>
 
-    </div>
+		<header></header>
 
-  </div>
-</div>
-
-<header></header>
-
-<!-- Time End -->
+		<!-- Time End -->
 
 
-<!-- Talent -->
-<div id="talent-background">
-<div class="jumbotron-fluid giving">
-  <div class="container">
-    <h1 id="talent-header" class="display-4">TALENT</h1>
-  </div>
-</div>
-</div>
+		<!-- Talent -->
+		<div id="talent-background">
+			<div class="jumbotron-fluid giving">
+				<div class="container">
+					<h1 id="talent-header" class="display-4">TALENT</h1>
+				</div>
+			</div>
+		</div>
 
-<section>
-	<div id="container">
-		<img src="">
-		<img src="">
-		<img src="">
-	</div>
-</section>
+		<section>
+			<div id="container">
+				<img src="">
+				<img src="">
+				<img src="">
+			</div>
+		</section>
 
-<!-- Talent End -->
+		<!-- Talent End -->
 
-<header></header>
+		<header></header>
 
-<!-- Stewardship -->
-<div id="steward-background">
-<div class="jumbotron-fluid giving">
-  <div class="container">
-    <h1 id="steward-header" class="display-4">STEWARDSHIP</h1>
-  </div>
-</div>
-</div>
+		<!-- Stewardship -->
+		<div id="steward-background">
+			<div class="jumbotron-fluid giving">
+				<div class="container">
+					<h1 id="steward-header" class="display-4">STEWARDSHIP</h1>
+				</div>
+			</div>
+		</div>
 
-<section id="stewardship">
+		<section id="stewardship">
 			<div class="container">
 				<h1 style="margin-top: 2%; margin-bottom: 2%;">“On This Rock I Will Build My Church...” Matthew 16:18</h1>
-				
+
 			</div>
-		
+
 		</section>
-<!-- Treasure End -->
+		<!-- Treasure End -->
 
 
-<!-- Content -->
+		<!-- Content -->
 
-<!-- Footer -->
+		<!-- Footer -->
 		<section id="newsletter">
-				<section id="map">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="200" height="200" frameborder="0" allowfullscreen></iframe>
-				</section>
-			
+			<section id="map">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640"
+				 width="200" height="200" frameborder="0" allowfullscreen></iframe>
+			</section>
+
 			<div class="container">
 				<ul id="social">
-					<li><a href="#"><img src="insta.svg"></a></li>
-					<li><a href="#"><img src="facebook.svg"></a></li>
+					<li>
+						<a href="#">
+							<img src="insta.svg">
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="facebook.svg">
+						</a>
+					</li>
 				</ul>
-				<h1 id="footer-head"><i>JOIN US THIS LITURGICAL YEAR</i><br> 
+				<h1 id="footer-head">
+					<i>JOIN US THIS LITURGICAL YEAR</i>
+					<br>
 					<span id="footer-sub">KEEP IN TOUCH WITH ST. PHILIP'S</span>
 				</h1>
 
@@ -243,12 +277,12 @@
 				</form>
 			</div>
 		</section>
-<!-- Footer End -->
+		<!-- Footer End -->
 
-	<footer>
-		<p>2017 &copy; St. Philip's Church. All rights reserved.</p>
-	</footer>		
+		<footer>
+			<p>2017 &copy; St. Philip's Church. All rights reserved.</p>
+		</footer>
 
-</body>
+	</body>
+
 </html>
-
