font-size changes
15px

--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -180,9 +180,11 @@
 						</p>
 
 					</article>
+<!--
 					<div id="actual-v-button">
-						<!-- <button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">JOIN</button> -->
+						 <button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">JOIN</button> 
 					</div>
+-->
 
 					<div class="col" style="margin: auto; text-align: center;">
 						<aside id="ministries-img-sec">
