--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -37,7 +37,7 @@
 		<header id="top-bot-border">
 			<div class="container">
 				<div id="branding">
-					<img src="./logo/logorere-01.png" width="320" height="40" id="logo-main">
+					<img src="./logo/stlogo.png" width="320" height="40" id="logo-main">
 				</div>
 				<nav>
 					<ul>
