--- a/pt St. Philips/pastoralcare.html
+++ b/pt St. Philips/pastoralcare.html
@@ -30,12 +30,12 @@
 	<header id="top-bot-border">
 		<div class="container" >
 			<div id="branding">
-				<img src="./logo/logorere-01.png" width="320" height="40" id="logo-main">
+				<img src="./logo/stlogo.png" width="320" height="40" id="logo-main">
 			</div>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><a href="#">About</a></li>
+					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="current dropdown-toggle"><a href="#">About</a></li>
 						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 							<a class="dropdown-item" href="about.html">INFO</a>
 							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
@@ -44,7 +44,7 @@
     						<a class="dropdown-item" href="pastoralcare.html">PASTORAL CARE</a>
   						</li>
 					<li><a href="history.html">History</a></li>
-					<li class="current"><a href="giving.html">Giving</a></li>
+					<li><a href="giving.html">Giving</a></li>
 					<li><a href="ministries.html">Ministries</a></li>
 					<li><a href="celebration.html">Celebration</a></li>
 				</ul>
