--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -28,7 +28,7 @@
 	<header id="top-bot-border">
 		<div class="container" >
 			<div id="branding">
-				<img src="./logo/logorere-01.png" width="320" height="40" id="logo-main">
+				<img src="./logo/stlogo.png" width="320" height="40" id="logo-main">
 			</div>
 			<nav>
 				<ul>
@@ -39,6 +39,7 @@
 							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
     						<a class="dropdown-item" href="rentals.html">RENTALS</a>
+                            <a class="dropdown-item" href="pastoralcare.html">PASTORAL CARE</a>
   						</li>
 					<li><a href="history.html">History</a></li>
 					<li><a href="giving.html">Giving</a></li>
