--- a/pt St. Philips/history.html
+++ b/pt St. Philips/history.html
@@ -32,7 +32,7 @@
 	<header id="top-bot-border">
 		<div class="container" >
 			<div id="branding">
-				<img src="./logo/logorere-01.png" width="320" height="40" id="logo-main">
+				<img src="./logo/stlogo.png" width="320" height="40" id="logo-main">
 			</div>
 			<nav>
 				<ul>
@@ -120,7 +120,7 @@
 		<h2 class="history-header history-header-green">A Condensed History of 
 			<br> St. Philip's Church 1809 - 2015
 		</h2>
-			<article class="history-sub-left">
+			<article class="history-sub-left-3">
 				<p>The condensed history of St. Philip's Church reflects the trials and triumphs of the African American community for nearly two centuries. In fact the pre-history of this congregation dates back to 1702 when the Huguenot, former galley slave, and prisoner Elias Neau petitioned England for missionaries to instruct "Negroes and Indians in New York.: In 1704 the Society for the propagation of the Gospel appointed Neau "catechist to the outcast" and he was charged with opening the "School for Negroes."
 
 				<br><br>
@@ -141,7 +141,7 @@
 <!--  -->
 
 	<div class="container">
-			<article class="history-sub-left">
+			<article class="history-sub-left-2">
 				<p>
 				By the early 1800's, the "Free African Church of St. Philip" was formed by those who refused to continue to accept the racism they faced in worship but who wished to worship in the "Anglican Way."
 
@@ -170,7 +170,7 @@
 <!--  -->
 
 		<div class="container">
-			<article class="history-sub-right">
+			<article class="history-sub-right-0">
 				<p>
 				the choir with men and women. She revived the music school at St. Philip's.
 				
@@ -247,7 +247,7 @@
 <!--  -->
 
 	<div class="container">
-			<article class="history-sub-right">
+			<article class="history-sub-right-1">
 				<p>
 				<br>
 				In 1957, Dr. M. Moran Weston became the sixth rector. During the next 25 years, he continued the tradition of social activism. He further expanded the church's role in providing affordable housing by opening non-profit developments
