padding and title change

--- a/pt St. Philips/history.html
+++ b/pt St. Philips/history.html
@@ -98,7 +98,7 @@
 	<div id="history-start" class="container">
 		<h2 class="history-header history-header-green">The Arms of St. Philip's
 		</h2>
-			<article class="history-sub-left history-logo-sub">
+			<article class="history-sub-left-4 history-logo-sub">
 				<p>St. Philip's arms was commissioned in the mid-1960s by Dr. M. Moran Weston to be its identifying symbol. Our arms represents the account of Philip, deacon and evangelist as written in Acts 8:26-40. The shield was created by Reverend Edward N. West, Canon Sacrist of the Cathedral of St. John the Divine.
 				
 				<br><br> In the upper left-hand corner of the shield is the Cross of St. George, representing the Anglican Communion throughout the world.
@@ -118,7 +118,7 @@
 
 	<div id="history-start" class="container">
 		<h2 class="history-header history-header-green">A Condensed History of 
-			<br> St. Philip's Church 1809 - 2015
+			<br> St. Philip's Church 1809 to Present
 		</h2>
 			<article class="history-sub-left-3">
 				<p>The condensed history of St. Philip's Church reflects the trials and triumphs of the African American community for nearly two centuries. In fact the pre-history of this congregation dates back to 1702 when the Huguenot, former galley slave, and prisoner Elias Neau petitioned England for missionaries to instruct "Negroes and Indians in New York.: In 1704 the Society for the propagation of the Gospel appointed Neau "catechist to the outcast" and he was charged with opening the "School for Negroes."
