from the rector intro

--- a/pt St. Philips/testimonies.html
+++ b/pt St. Philips/testimonies.html
@@ -52,18 +52,17 @@
 <!-- Navigation End -->
 
 <!-- Testimonies -->
-<div class="container">
-	<section id="mission">
-		<div id="mission-start" class="container">
-			<h2 class="mission-header mission-header-green">Testimonies
-			</h2>
-				<article class="mission-top-sub">
-					<p>Page in development
-					</p>
-				</article>
-		</div>
-	</section>
+<div id="time-background">
+<div class="jumbotron-fluid giving">
+  <div class="container">
+    <h1 id="time-header" class="display-4">FROM THE RECTOR</h1>
+  </div>
 </div>
+</div>
+    
+    <div>
+    <a href=""><h1>Ordinary Time</h1></a>
+    </div>
 <!-- Testimonies End -->
 
 <!-- Footer -->
