from the rector

--- a/pt St. Philips/pastoralcare.html
+++ b/pt St. Philips/pastoralcare.html
@@ -38,7 +38,7 @@
 					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="current dropdown-toggle"><a href="#">About</a></li>
 						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 							<a class="dropdown-item" href="about.html">INFO</a>
-							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
+							<a class="dropdown-item" href="testimonies.html">FROM THE RECTOR</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
     						<a class="dropdown-item" href="rentals.html">RENTALS</a>
     						<a class="dropdown-item" href="pastoralcare.html">PASTORAL CARE</a>
