from the rector

--- a/pt St. Philips/testimonies.html
+++ b/pt St. Philips/testimonies.html
@@ -68,7 +68,7 @@
   <div id="row-1" class="row">
 
     <div class="col-sm">
-      <a href="bulletin/From the Rector.jpg" data-lightbox="gallery" data-title="From the Rector"> <img class="grow" src="thumb/thumb 1.jpg" width="200vw" height="200vh"></a>
+      <a href="bulletin/From the Rector.jpg" data-lightbox="gallery" data-title="From the Rector"> <img class="grow" src="thumb/thumb 1.JPG" width="200vw" height="200vh"></a>
       <br>
       <h6>Ordinary Time Aug 08, 2018</h2>
     </div>
