--- a/pt St. Philips/testimonies.html
+++ b/pt St. Philips/testimonies.html
@@ -73,6 +73,12 @@
       <h6>Ordinary Time Aug 08, 2018</h2>
     </div>
 
+    <div class="col-sm">
+      <a href="bulletin/From the Rector.jpg" data-lightbox="gallery" data-title="From the Rector"> <img class="grow" src="thumb/thumb 1.JPG" width="200vw" height="200vh"></a>
+      <br>
+      <h6>Jesus is our Hope Aug 19, 2018</h2>
+    </div>
+
 </div>
 </div>
 <!-- Testimonies End -->
