--- a/pt St. Philips/testimonies.html
+++ b/pt St. Philips/testimonies.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="col-sm">
-      <a href="bulletin/From the Rector.jpg" data-lightbox="gallery" data-title="From the Rector"> <img class="grow" src="thumb/thumb 1.JPG" width="200vw" height="200vh"></a>
+      <a href="bulletin/Jesus is Our Hope.jpg" data-lightbox="gallery" data-title="From the Rector"> <img class="grow" src="thumb/thumb 1.JPG" width="200vw" height="200vh"></a>
       <br>
       <h6>Jesus is our Hope Aug 19, 2018</h2>
     </div>
